# poc_semantic

./: .gitignore  Cargo.toml  README.md  epistemic_cultivation.html  semantic_v2_architecture.md
assets/: graph3d.js  style.css  visualizador.js
docs/: calibracao-nomic-embed-text.md
src/: main.rs  metrics.rs  orchestrator.rs  pdf.rs  persistence.rs
src/core/: concept.rs  knowledge_base.rs  link.rs  mod.rs  truth_value.rs
src/inference/: mod.rs  rules.rs
src/nlu/: embedder.rs  extractor.rs  intent.rs  mod.rs  question.rs
src/web/: events.rs  handlers.rs  mod.rs  state.rs  templates.rs
